# FastApiDesafio

./: .env  README.md  bank.db  pyproject.toml
migrations/: env.py
migrations/versions/: 3342651f4dd5_add_initial_tables.py  879031b28740_add_initial_tables.py  c98942878b89_migração_inicial.py
src/: database.py  exceptions.py  main.py  security.py
src/controllers/: account.py  transaction.py
src/models/: account.py  transaction.py
src/schemas/: account.py  transaction.py
src/services/: account.py  transaction.py
src/views/: account.py  transaction.py
