[tool.poetry]
name = "fastapidesafio"
version = "0.1.0"
description = ""
authors = ["tiago valente <tivalente@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "*"
databases = {extras = ["iosqlite"], version = "^0.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
